--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 csv_pca filter=lfs diff=lfs merge=lfs -text
+csv_pca/psam_p06.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
