--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 csv_pca filter=lfs diff=lfs merge=lfs -text
 csv_pca/psam_p06.csv filter=lfs diff=lfs merge=lfs -text
+C:/Users/celin/OneDrive/Education/USD-MS-ADS/ADS-504/Final-Project/csv_pca/psam_p06.csv filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
